(2) Multi-threading for NLM-filter caused many difficulties with some Matlab
    version. Thus, only single-threading is used as default. For multi-threading
    the flag "warp.sanlm" in cg_vbm8_defaults should be set to "2".
(3) Before NLM-filtering all NaN-values are replaced with "0". Furthermore, the
    output data-type for cg_sanlm is now at least floating precision to prevent
    rounding issues after filtering (thanks to Robert Dahnke for pointing to
    this issue). 
------------------------------------------------------------------------
r371 | gaser | 2010-11-29 01:40:06

M       cg_vbm8_write.m

In the results print-out the TPM was not updated (thanks to Alan Huang for
pointing to this issue).

------------------------------------------------------------------------
r372 | gaser | 2010-11-30 00:13:53

M      cg_vbm8_write.m

Corrected some typos in cg_vbm8_write.m
------------------------------------------------------------------------
r373 | gaser | 2010-12-01 16:17:13

M      sanlmMex.mexw32
M      sanlmMex_noopenmp.mexmaci
M      AmapMex.mexa64
M      AmapMex.mexw32
M      sanlmMex.mexw64
M      AmapMex.mexmaci64
M      sanlmMex_noopenmp.mexglx
M      AmapMex.mexmaci
M      sanlmMex.mexglx
M      vollib.c
M      sanlmMex.mexmaci64
M      sanlm_float.c
M      AmapMex.mexw64
M      sanlmMex_noopenmp.mexmaci64
M      sanlmMex_noopenmp.mexa64
M      sanlmMex.mexmaci
M      sanlmMex.mexa64
M      AmapMex.mexglx

Removed a memory leak in sanlm_float.c and vollib.c.
------------------------------------------------------------------------
r374 | gaser | 2010-12-06 11:50:27

M       spm_vbm8.m
M       cg_vbm8_tools.m
A       cg_vbm8_longitudinal_multi_run.m
A       cg_vbm8_longitudinal_multi.m
M       VBM8-Manual.pdf
M       cg_vbm8_longitudinal.m

(1) Added batch for processing longitudinal data for multiple subjects.
(2) Updated VBM8 manual
------------------------------------------------------------------------
r375 | gaser | 2010-12-15 08:15:41